# rust_vibrating_sensor

./: CLAUDE.md  Cargo.toml  README.md  Settings.toml
docs/: CROSS_COMPILE_ARM32.md
scripts/: build-armv7-musl.sh
src/: config.rs  constants.rs  main.rs  mqtt.rs  packet.rs  server.rs
ui/: index.html
ui/assets/: index-79h--bDl.css  index-CDax3yLT.js  index-Cb1h7OvD.css  index-v3w3NyDM.js
web_ui/vibrating-config/: README.md  package-lock.json  package.json  vite.config.js
web_ui/vibrating-config/src/: App.vue
web_ui/vibrating-config/src/components/: ProConfig.vue
