[package]
name = "rust_vibrating_sensor"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.9.8"
env_logger = "0.11.8"
log = "0.4.29"
mqtt-endpoint-tokio = "0.6.0"
serde_json = "1.0.145"
axum = "0.8.7"
url = "2.5.8"
tower-http = { version = "0.6.1", features = ["fs", "trace", "cors"] }
tracing = "0.1.44"
uuid = { version = "1.0", features = ["v4"] }